# thruster_ident_driver

./: CMakeLists.txt  README.md  copy_bbb_brlnet.sh  copy_bbb_brlwifi.sh  copy_bbb_local.sh  copy_eurathlon_vm.sh  package.xml  thruster_ident_driver.xml  thruster_ident_param.yaml
include/thruster_ident_driver/: thruster_ident_driver.hpp  thruster_ident_hw_loop.hpp
launch/: hw_loop.launch  thruster_ident_driver.launch
src/: thruster_ident_driver.cpp  thruster_ident_hw_loop.cpp
