<package>
	<name>thruster_ident_driver</name>
	<version>0.0.1</version>
	<description>thruster_ident_driver</description>
	<maintainer email="raphael.nagel@posteo.de">Raphael Nagel</maintainer>
	<license>GPLv2</license>
	<author>Raphael Nagel </author>
	
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>controller_interface</build_depend>
	<build_depend>control_msgs</build_depend>
	<build_depend>control_toolbox</build_depend>
	<build_depend>realtime_tools</build_depend>
	<build_depend>urdf</build_depend>
	<build_depend>forward_command_controller</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>pluginlib</build_depend>

	<run_depend>controller_interface</run_depend>
	<run_depend>control_msgs</run_depend>
	<run_depend>control_toolbox</run_depend>
	<run_depend>realtime_tools</run_depend>
	<run_depend>urdf</run_depend>
	<run_depend>forward_command_controller</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>pluginlib</run_depend>
	
	<export>
		<controller_interface plugin="${prefix}/thruster_ident_driver.xml"/>
	</export>
</package>